@@ -1,3 +1,7 @@
+30 April 2007
+
+* Option to use PCRE (build with make -DPCRE).
+
 19 April 2007
 
 * Count the number of messages properly when there is no done function (such as
@@ -258,4 +262,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.69 2007-04-19 13:55:14 nicm Exp $
+$Id: CHANGES,v 1.70 2007-04-30 12:30:49 nicm Exp $
